[gd_scene load_steps=102 format=2]

[ext_resource path="res://art/characters/player/female_archer.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.6594, 27.0233 )

[sub_resource type="CircleShape2D" id=2]
radius = 250.0

[sub_resource type="Animation" id=3]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58, 59 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "defeat_down"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=8]
resource_name = "defeat_left"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47 ]
}

[sub_resource type="Animation" id=9]
resource_name = "defeat_right"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62, 63 ]
}

[sub_resource type="Animation" id=10]
resource_name = "defeat_up"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=11]
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=12]
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=13]
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51 ]
}

[sub_resource type="Animation" id=14]
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=15]
length = 0.3
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.14, 0.22 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.14 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_sound"
} ]
}

[sub_resource type="Animation" id=16]
length = 0.3
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.14, 0.22 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.14 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_sound"
} ]
}

[sub_resource type="Animation" id=17]
length = 0.3
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.14, 0.22 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.14 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_sound"
} ]
}

[sub_resource type="Animation" id=18]
length = 0.3
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.14, 0.22 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.14 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_sound"
} ]
}

[sub_resource type="Animation" id=19]
length = 0.3

[sub_resource type="Animation" id=20]
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=21]
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=22]
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55 ]
}

[sub_resource type="Animation" id=23]
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=24]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 14 ]
}

[sub_resource type="Animation" id=25]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47, 46 ]
}

[sub_resource type="Animation" id=26]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62, 63, 62 ]
}

[sub_resource type="Animation" id=27]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31, 30 ]
}

[sub_resource type="Animation" id=28]
length = 0.55
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_sound"
} ]
}

[sub_resource type="Animation" id=29]
length = 0.55
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_sound"
} ]
}

[sub_resource type="Animation" id=30]
length = 0.55
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_sound"
} ]
}

[sub_resource type="Animation" id=31]
length = 0.55
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_sound"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "attack_left"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "attack_right"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "attack_up"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "attack_down"

[sub_resource type="AnimationNodeBlendSpace2D" id=36]
blend_point_0/node = SubResource( 32 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 33 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 34 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 35 )
blend_point_3/pos = Vector2( 0, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "defeat_left"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "defeat_right"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "defeat_down"

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "defeat_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=41]
blend_point_0/node = SubResource( 37 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 38 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 39 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 40 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=44]
animation = "idle_up"

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "idle_down"

[sub_resource type="AnimationNodeBlendSpace2D" id=46]
blend_point_0/node = SubResource( 42 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 43 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 44 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 45 )
blend_point_3/pos = Vector2( 0, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=47]
animation = "run_left"

[sub_resource type="AnimationNodeAnimation" id=48]
animation = "run_right"

[sub_resource type="AnimationNodeAnimation" id=49]
animation = "run_up"

[sub_resource type="AnimationNodeAnimation" id=50]
animation = "run_down"

[sub_resource type="AnimationNodeBlendSpace2D" id=51]
blend_point_0/node = SubResource( 47 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 48 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 49 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 50 )
blend_point_3/pos = Vector2( 0, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "sneak_left"

[sub_resource type="AnimationNodeAnimation" id=53]
animation = "sneak_right"

[sub_resource type="AnimationNodeAnimation" id=54]
animation = "sneak_up"

[sub_resource type="AnimationNodeAnimation" id=55]
animation = "sneak_down"

[sub_resource type="AnimationNodeBlendSpace2D" id=56]
blend_point_0/node = SubResource( 52 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 53 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 54 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 55 )
blend_point_3/pos = Vector2( 0, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=57]
animation = "stunned_left"

[sub_resource type="AnimationNodeAnimation" id=58]
animation = "stunned_right"

[sub_resource type="AnimationNodeAnimation" id=59]
animation = "stunned_up"

[sub_resource type="AnimationNodeAnimation" id=60]
animation = "stunned_down"

[sub_resource type="AnimationNodeBlendSpace2D" id=61]
blend_point_0/node = SubResource( 57 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 58 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 59 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 60 )
blend_point_3/pos = Vector2( 0, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=62]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=63]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=64]
animation = "walk_up"

[sub_resource type="AnimationNodeAnimation" id=65]
animation = "walk_down"

[sub_resource type="AnimationNodeBlendSpace2D" id=66]
blend_point_0/node = SubResource( 62 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 63 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 64 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 65 )
blend_point_3/pos = Vector2( 0, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=67]

[sub_resource type="AnimationNodeStateMachineTransition" id=68]

[sub_resource type="AnimationNodeStateMachineTransition" id=69]

[sub_resource type="AnimationNodeStateMachineTransition" id=70]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=71]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=72]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=73]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=74]

[sub_resource type="AnimationNodeStateMachineTransition" id=75]

[sub_resource type="AnimationNodeStateMachineTransition" id=76]

[sub_resource type="AnimationNodeStateMachineTransition" id=77]

[sub_resource type="AnimationNodeStateMachineTransition" id=78]

[sub_resource type="AnimationNodeStateMachineTransition" id=79]

[sub_resource type="AnimationNodeStateMachineTransition" id=80]

[sub_resource type="AnimationNodeStateMachineTransition" id=81]

[sub_resource type="AnimationNodeStateMachineTransition" id=82]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=83]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=84]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=85]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=86]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=87]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=88]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=89]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=90]

[sub_resource type="AnimationNodeStateMachineTransition" id=91]

[sub_resource type="AnimationNodeStateMachineTransition" id=92]

[sub_resource type="AnimationNodeStateMachineTransition" id=93]

[sub_resource type="AnimationNodeStateMachineTransition" id=94]

[sub_resource type="AnimationNodeStateMachineTransition" id=95]

[sub_resource type="AnimationNodeStateMachineTransition" id=96]

[sub_resource type="AnimationNodeStateMachineTransition" id=97]

[sub_resource type="AnimationNodeStateMachine" id=98]
states/attack/node = SubResource( 36 )
states/attack/position = Vector2( 321, 323.974 )
states/defeat/node = SubResource( 41 )
states/defeat/position = Vector2( 6.73877, 116.682 )
states/idle/node = SubResource( 46 )
states/idle/position = Vector2( 155, 37.974 )
states/run/node = SubResource( 51 )
states/run/position = Vector2( 484, 37.974 )
states/sneak/node = SubResource( 56 )
states/sneak/position = Vector2( 484, 235 )
states/stunned/node = SubResource( 61 )
states/stunned/position = Vector2( 321, -53.497 )
states/walk/node = SubResource( 66 )
states/walk/position = Vector2( 155, 235 )
transitions = [ "idle", "walk", SubResource( 67 ), "idle", "run", SubResource( 68 ), "idle", "sneak", SubResource( 69 ), "attack", "run", SubResource( 70 ), "attack", "idle", SubResource( 71 ), "attack", "walk", SubResource( 72 ), "attack", "sneak", SubResource( 73 ), "idle", "attack", SubResource( 74 ), "run", "attack", SubResource( 75 ), "sneak", "attack", SubResource( 76 ), "walk", "attack", SubResource( 77 ), "sneak", "idle", SubResource( 78 ), "idle", "stunned", SubResource( 79 ), "walk", "stunned", SubResource( 80 ), "sneak", "stunned", SubResource( 81 ), "attack", "stunned", SubResource( 82 ), "stunned", "idle", SubResource( 83 ), "walk", "sneak", SubResource( 84 ), "sneak", "walk", SubResource( 85 ), "sneak", "run", SubResource( 86 ), "run", "sneak", SubResource( 87 ), "walk", "run", SubResource( 88 ), "run", "walk", SubResource( 89 ), "walk", "idle", SubResource( 90 ), "run", "idle", SubResource( 91 ), "run", "stunned", SubResource( 92 ), "idle", "defeat", SubResource( 93 ), "run", "defeat", SubResource( 94 ), "walk", "defeat", SubResource( 95 ), "sneak", "defeat", SubResource( 96 ), "attack", "defeat", SubResource( 97 ) ]
start_node = "idle"
end_node = "defeat"
graph_offset = Vector2( -141.194, -72.595 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=99]

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.9, 0.9 )
z_index = 3
collision_mask = 13044
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.118424, 0.356597 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
vframes = 16
hframes = 4
frame = 32

[node name="Sound" type="Area2D" parent="."]
visible = false
monitorable = false
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sound"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
method_call_mode = 1
anims/attack_down = SubResource( 3 )
anims/attack_left = SubResource( 4 )
anims/attack_right = SubResource( 5 )
anims/attack_up = SubResource( 6 )
anims/defeat_down = SubResource( 7 )
anims/defeat_left = SubResource( 8 )
anims/defeat_right = SubResource( 9 )
anims/defeat_up = SubResource( 10 )
anims/idle_down = SubResource( 11 )
anims/idle_left = SubResource( 12 )
anims/idle_right = SubResource( 13 )
anims/idle_up = SubResource( 14 )
anims/run_down = SubResource( 15 )
anims/run_left = SubResource( 16 )
anims/run_right = SubResource( 17 )
anims/run_up = SubResource( 18 )
anims/shot = SubResource( 19 )
anims/sneak_down = SubResource( 20 )
anims/sneak_left = SubResource( 21 )
anims/sneak_right = SubResource( 22 )
anims/sneak_up = SubResource( 23 )
anims/stunned_down = SubResource( 24 )
anims/stunned_left = SubResource( 25 )
anims/stunned_right = SubResource( 26 )
anims/stunned_up = SubResource( 27 )
anims/walk_down = SubResource( 28 )
anims/walk_left = SubResource( 29 )
anims/walk_right = SubResource( 30 )
anims/walk_up = SubResource( 31 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 98 )
anim_player = NodePath("../AnimationPlayer")
active = true
process_mode = 0
parameters/playback = SubResource( 99 )
parameters/attack/blend_position = Vector2( 0, 0 )
parameters/defeat/blend_position = Vector2( 0, 0 )
parameters/idle/blend_position = Vector2( 0, 0 )
parameters/run/blend_position = Vector2( 0, 0 )
parameters/sneak/blend_position = Vector2( 0, 0 )
parameters/stunned/blend_position = Vector2( -0.997416, 0 )
parameters/walk/blend_position = Vector2( -0.98977, -0.0138505 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="Timer2" type="Timer" parent="."]
process_mode = 0
wait_time = 0.4
one_shot = true
[connection signal="body_entered" from="Sound" to="." method="_on_Sound_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
